feat: add sale endpoints and implement logic
